@@ -1,5 +1,7 @@
 2001-04-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
+	* Netcomics/Factory.pm (init): Made it so that the same Factory
+	instance can be reused for download different sets of comics.
 	* Makefile (POD2MANRULES,POD2HTMLRULES): Added these rules to
 	produce the manpages & html pages for the pod files.  Generalized
 	the rules for producing man & html pages.
